[gd_scene load_steps=5 format=3 uid="uid://nwvk02u7y0si"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ajoie"]
[ext_resource type="Texture2D" uid="uid://db1cm7c6u5biu" path="res://Assets/Space bakcground.jpeg" id="1_v8uhq"]
[ext_resource type="Texture2D" uid="uid://danvojveawjx7" path="res://Assets/WhatsApp Image 2024-06-12 at 12.34.55.jpeg" id="2_y8ii6"]
[ext_resource type="FontFile" uid="uid://dg0iy5pc1tbr7" path="res://Assets/font/pixcon/PixCon.ttf" id="3_yio2n"]

[node name="main" type="Node2D"]
script = ExtResource("1_ajoie")

[node name="SpaceBackground" type="Sprite2D" parent="."]
position = Vector2(553, 295)
texture = ExtResource("1_v8uhq")

[node name="boardImage" type="Sprite2D" parent="."]
scale = Vector2(0.979, 0.979)
texture = ExtResource("2_y8ii6")
centered = false
region_enabled = true
region_rect = Rect2(3.76926, 653.394, 623.895, 623.201)

[node name="ui" type="Control" parent="." groups=["ui"]]
layout_mode = 3
anchors_preset = 0

[node name="P1Score" type="Label" parent="ui" groups=["ui"]]
layout_mode = 0
offset_left = 642.0
offset_top = 25.0
offset_right = 1020.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("3_yio2n")
theme_override_font_sizes/font_size = 30
text = "Player 1:"

[node name="P2Score" type="Label" parent="ui" groups=["ui"]]
layout_mode = 0
offset_left = 642.0
offset_top = 115.0
offset_right = 1045.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("3_yio2n")
theme_override_font_sizes/font_size = 30
text = "Player 2:
"

[node name="ColorRect2" type="ColorRect" parent="ui"]
layout_mode = 0
offset_left = 652.0
offset_top = 303.0
offset_right = 692.0
offset_bottom = 343.0
scale = Vector2(6.57378, 6.42685)
color = Color(0, 1, 0, 1)

[node name="ColorRect" type="ColorRect" parent="ui"]
layout_mode = 0
offset_left = 657.0
offset_top = 310.0
offset_right = 697.0
offset_bottom = 350.0
scale = Vector2(6.26609, 6.06864)
color = Color(0, 0, 0, 1)

[node name="feedback" type="Label" parent="ui"]
layout_mode = 0
offset_left = 663.0
offset_top = 346.0
offset_right = 896.0
offset_bottom = 545.0
theme_override_font_sizes/font_size = 20
text = "This is test output.
"
autowrap_mode = 2

[node name="feedback2" type="Label" parent="ui"]
layout_mode = 0
offset_left = 663.0
offset_top = 309.0
offset_right = 896.0
offset_bottom = 341.0
theme_override_font_sizes/font_size = 20
text = "This is test output.
"
autowrap_mode = 2

[node name="pieces storage" type="Node2D" parent="."]
